name:                repa-hmatrix
version:             0.0.0.1
synopsis:            a library to allow easy interoperation between Repa and HMatrix
-- description:         
homepage:            https://github.com/dlahoti/repa-hmatrix
license:             GPL-3
license-file:        LICENSE
author:              Deven Lahoti
maintainer:          deven.lahoti@gmail.com
copyright:           2016
category:            Math
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:      Data.Array.Repa.Repr.HMatrix
  -- other-modules:        
  other-extensions:     TypeSynonymInstances, FlexibleInstances,
                        FlexibleContexts, UndecidableInstances,
                        MultiParamTypeClasses, TypeFamilies,
                        BangPatterns
  build-depends:        base >=4.8,
                        vector,
                        repa,
                        hmatrix
  hs-source-dirs:       src
  default-language:     Haskell2010
